// Copyright (c) 2018-present,  NebulaChat Studio (https://nebula.chat).
//  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Author: Benqi (wubenqi@gmail.com)

syntax = "proto3";

option java_multiple_files = true;
option java_package = "im.nebula.service.status";
option java_outer_classname = "StatusProto";
option optimize_for = CODE_SIZE;

package status;

////////////////////////////////////////////////////////////////////////////////////////
message Int32 {
    int32 v = 1;
}

message Int32List {
    repeated int32 vlist = 1;
}

message Int64List {
    repeated int64 vlist = 1;
}

message Void {
}

////////////////////////////////////////////////////////////////////////////////////////
message SessionEntry {
    int32 user_id = 1;
    int32 server_id = 2;
    int64 auth_key_id = 3;
    int64 expired = 4;
    int32 layer = 5;
}

message SessionEntryList {
    repeated SessionEntry sessions = 1;
    // repeated SessionEntry push_sessions = 2;
}

message UsersSessionEntryList {
    map<int32, SessionEntryList> users_sessions = 1;  // <server_id, UserSessions>
}

////////////////////////////////////////////////////////////////////////////////////////
service RPCStatus {
    rpc SetSessionOnline (SessionEntry) returns (Void);
    rpc SetSessionOffline (SessionEntry) returns (Void);
    rpc GetUserOnlineSessions (Int32) returns (SessionEntryList);
    rpc GetUsersOnlineSessionsList (Int32List) returns (UsersSessionEntryList);
}
